--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,19 +5,27 @@ AllCops:
 
 AlignParameters:
   Enabled: false
-Encoding:
-  Enabled: false
 ClassLength:
   Enabled: false
-MethodLength:
-  Enabled: false
-LineLength:
+CyclomaticComplexity:
   Enabled: false
 Documentation:
   Enabled: false
+Encoding:
+  Enabled: false
+Style/FileName:
+  Enabled: false
+LineLength:
+  Enabled: false
+MethodLength:
+  Enabled: false
+Metrics/AbcSize:
+  Enabled: false
 PerceivedComplexity:
   Enabled: false
-CyclomaticComplexity:
+SingleSpaceBeforeFirstArg:
+  Enabled: false
+Style/ClassAndModuleChildren:
   Enabled: false
 Style/FileName:
   Enabled: false
