--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -8,11 +8,12 @@ platforms:
   - name: centos-5.11
   - name: centos-6.7
   - name: centos-7.1
-  - name: debian-7.8
+  - name: debian-7.9
     run_list: apt::default
-  - name: debian-8.1
+  - name: debian-8.2
     run_list: apt::default
-  - name: fedora-21
+  - name: fedora-22
+  - name: fedora-23
   - name: ubuntu-12.04
     run_list: apt::default
   - name: ubuntu-14.04
@@ -21,6 +22,4 @@ platforms:
 suites:
 - name: default
   run_list:
-    - "recipe[ohai]"
-    - "recipe[ohai_test::add_hint_immediate]"
-    - "recipe[ohai_test::node_dump]"
+    - "recipe[ohai_test::default]"
