--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -23,8 +23,14 @@ platforms:
     run_list: apt::default
   - name: ubuntu-14.04
     run_list: apt::default
+  - name: windows-2008r2
+    driver_config:
+      box: chef/windows-server-2008r2-standard
+  - name: windows-2012r2
+    driver_config:
+      box: chef/windows-server-2012r2-standard
 
 suites:
 - name: default
   run_list:
-    - "recipe[ohai_test::default]"
+    - recipe[ohai_test::default]
