--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -34,8 +34,8 @@ platforms:
     image: centos:5
     platform: rhel
     pid_one_command: /sbin/init
-    provision_command:
-      - /usr/bin/yum install -y initscripts wget
+    intermediate_instructions:
+      - RUN yum install -y which initscripts
 
 - name: centos-6
   driver:
@@ -49,14 +49,14 @@ platforms:
     image: centos:7
     pid_one_command: /usr/lib/systemd/systemd
     intermediate_instructions:
-      - RUN yum -y install lsof
+      - RUN yum -y install lsof which
 
 - name: fedora-23
   driver:
     image: fedora:23
     pid_one_command: /usr/lib/systemd/systemd
     intermediate_instructions:
-      - RUN dnf -y install yum
+      - RUN dnf -y install yum which
 
 - name: ubuntu-12.04
   driver:
