--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ addons:
     packages:
       - chefdk
 
+# Don't `bundle install` which takes about 1.5 mins
+install: echo "skip bundle install"
+
 branches:
   only:
   - master
@@ -20,10 +23,11 @@ env:
   - INSTANCE=default-centos-5
   - INSTANCE=default-centos-6
   - INSTANCE=default-centos-7
-  - INSTANCE=default-fedora-23
   - INSTANCE=default-debian-7
   - INSTANCE=default-debian-8
+  - INSTANCE=default-fedora-latest
   - INSTANCE=default-opensuse-132
+  - INSTANCE=default-opensuse-421
   - INSTANCE=default-ubuntu-1204
   - INSTANCE=default-ubuntu-1404
   - INSTANCE=default-ubuntu-1604
@@ -33,7 +37,6 @@ env:
 before_script:
   - sudo iptables -L DOCKER || ( echo "DOCKER iptables chain missing" ; sudo iptables -N DOCKER )
   - eval "$(/opt/chefdk/bin/chef shell-init bash)"
-  - /opt/chefdk/embedded/bin/chef gem install kitchen-dokken
 
 script:
   - /opt/chefdk/embedded/bin/chef --version
