--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -25,6 +25,8 @@ platforms:
     run_list: apt::default
   - name: ubuntu-14.04
     run_list: apt::default
+  - name: ubuntu-16.04
+    run_list: apt::default
   - name: windows-2008r2
     driver_config:
       box: chef/windows-server-2008r2-standard
