--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,22 +3,20 @@ driver:
 
 provisioner:
   name: chef_zero
+  deprecations_as_errors: true
 
 verifier:
   name: inspec
 
 platforms:
-  - name: centos-5.11
   - name: centos-6.8
-  - name: centos-7.2
+  - name: centos-7.3
   - name: debian-7.11
   - name: debian-8.6
   - name: freebsd-9.3
   - name: freebsd-10.3
   - name: fedora-25
-  - name: opensuse-13.2
-  - name: opensuse-leap-42.1
-  - name: ubuntu-12.04
+  - name: opensuse-leap-42.2
   - name: ubuntu-14.04
   - name: ubuntu-14.04-chef121
     driver_config:
