--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -51,14 +51,7 @@ platforms:
     image: fedora:latest
     pid_one_command: /usr/lib/systemd/systemd
     intermediate_instructions:
-      - RUN dnf -y install yum which
-
-- name: ubuntu-12.04
-  driver:
-    image: ubuntu-upstart:12.04
-    pid_one_command: /sbin/init
-    intermediate_instructions:
-      - RUN /usr/bin/apt-get update
+      - RUN dnf -y install which
 
 - name: ubuntu-14.04
   driver:
