Add testing on Chef 12.7
Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ env:
   - INSTANCE=default-opensuse-leap
   - INSTANCE=default-ubuntu-1404
   - INSTANCE=default-ubuntu-1604
+  - INSTANCE=default-ubuntu-1604 CHEF_VERSION=12.7.2
 
 before_script:
   - sudo iptables -L DOCKER || ( echo "DOCKER iptables chain missing" ; sudo iptables -N DOCKER )
