--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -19,12 +19,10 @@ platforms:
     image: dokken/amazonlinux
     pid_one_command: /sbin/init
 
-- name: debian-7
+- name: amazonlinux-2
   driver:
-    image: dokken/debian-7
-    pid_one_command: /sbin/init
-    intermediate_instructions:
-      - RUN /usr/bin/apt-get update
+    image: dokken/amazonlinux-2
+    pid_one_command: /usr/lib/systemd/systemd
 
 - name: debian-8
   driver:
@@ -69,12 +67,14 @@ platforms:
     intermediate_instructions:
       - RUN /usr/bin/apt-get update
 
+- name: ubuntu-18.04
+  driver:
+    image: dokken/ubuntu-18.04
+    pid_one_command: /bin/systemd
+    intermediate_instructions:
+      - RUN /usr/bin/apt-get update
+
 - name: opensuse-leap
   driver:
     image: dokken/opensuse-leap
     pid_one_command: /bin/systemd
-
-suites:
-- name: default
-  run_list:
-    - "recipe[ohai_test::default]"
