--- a/kitchen.yml
+++ b/kitchen.yml
@@ -16,8 +16,8 @@ platforms:
   - name: centos-6
   - name: centos-7
   - name: debian-7
-  - name: debian-8
   - name: debian-9
+  - name: debian-10
   - name: freebsd-10
   - name: freebsd-11
   - name: fedora-26
@@ -31,10 +31,10 @@ platforms:
   - name: ubuntu-16.04
   - name: windows-2008r2
     driver_config:
-      box: chef/windows-server-2008r2-standard
+      box: tas50/windows_2008r2
   - name: windows-2012r2
     driver_config:
-      box: chef/windows-server-2012r2-standard
+      box: tas50/windows_2012r2
 
 suites:
 - name: default
