--- a/kitchen.yml
+++ b/kitchen.yml
@@ -15,23 +15,14 @@ platforms:
       box: mvbcoding/awslinux
   - name: centos-6
   - name: centos-7
-  - name: debian-7
+  - name: centos-8
   - name: debian-9
   - name: debian-10
-  - name: freebsd-10
   - name: freebsd-11
-  - name: fedora-26
-  - name: opensuse-leap-42
-  - name: ubuntu-14.04
-  - name: ubuntu-14.04-chef127
-    driver_config:
-      box: bento/ubuntu-14.04
-    provisioner:
-      require_chef_omnibus: 12.7.2
+  - name: fedora-latest
+  - name: opensuse-leap-15
   - name: ubuntu-16.04
-  - name: windows-2008r2
-    driver_config:
-      box: tas50/windows_2008r2
+  - name: ubuntu-18.04
   - name: windows-2012r2
     driver_config:
       box: tas50/windows_2012r2
